Started with concurrency in the game

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.codingstuff.fiutoe">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -22,11 +24,11 @@
             android:name="com.codingstuff.fiutoe.SignUpActivity"
             android:exported="false" />
         <activity
-            android:name="com.codingstuff.fiutoe.MainActivity"
+            android:name="com.codingstuff.fiutoe.CodeGameActivity"
             android:exported="true">
         </activity>
         <activity
-            android:name="com.codingstuff.fiutoe.AddPlayersActivity"
+            android:name="com.codingstuff.fiutoe.GameActivity"
             android:exported="true">
         </activity>
     </application>
